DevOCL/src/objects/CLQ_Room_Space_Inspection__c.object
<CustomObject>
    <description>Junction object between Room/Space and Inspection</description>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <picklist>
            <picklistValues>
                <fullName>Infant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age_Rangr__c</fullName>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 12 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Additional_Width_Feet__c</fullName>
        <label>Additional Width Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Age_Group__c</fullName>
        <inlineHelpText>Will children in this room be over or under 2 1/2 years old?</inlineHelpText>
        <label>Age Group</label>
        <picklist>
            <picklistValues>
                <fullName>Over 2 1/2 Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under 2 1/2 Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both (Over &amp; Under 2 1/2)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_Room_Space__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_for_under_2_1_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for under 2 1/2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Building_Limitation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Building Limitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Calc_Nb_of_Child_Allowed_Indoor__c</fullName>
        <formula>ABS( CLQ_Square_Footage__c / 35)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Number of Children Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Calc_Nb_of_Children_Allowed_Outdoor__c</fullName>
        <formula>CLQ_Square_Footage__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Number of Children Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_County__c</fullName>
        <formula>CLQ_Program__r.CLQ_County__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Currently_In_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Room/Space Inspection object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Inspection__c</fullName>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Rooms/Space Inspection</relationshipLabel>
        <relationshipName>Rooms_Space_Inspection</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CLQ_Length2_Feet__c</fullName>
        <label>Length2 Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Length2_Inches__c</fullName>
        <label>Length2 Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Length_Additional_Feet__c</fullName>
        <label>Length Additional Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Length_Additional_Inches__c</fullName>
        <label>Length Additional Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Length_Feet__c</fullName>
        <label>Length1 Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Length_Inches__c</fullName>
        <label>Length1 Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Number_of_Children_Allowed__c</fullName>
        <label>Number of Children Allowed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Number_of_Children_Over_2_5__c</fullName>
        <label>Number of Children Over 2 1/2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Number_of_Children_Under_2_5__c</fullName>
        <label>Number of Children Under 2 1/2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Transaction</label>
        <referenceTo>CLQ_Program_Transaction__c</referenceTo>
        <relationshipName>Rooms_Spaces_Inspection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>CLQ_Program__c</referenceTo>
        <relationshipName>Rooms_Spaces_Inspection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Review_Comment__c</fullName>
        <label>Review Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_RoomSpace_Location__c</fullName>
        <inlineHelpText>Location within the building. Eg: Floor</inlineHelpText>
        <label>Room/Space Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Room_Group_Information__c</fullName>
        <label>Room/Group Information</label>
        <referenceTo>CLQ_Room_Space__c</referenceTo>
        <relationshipLabel>Rooms/Space Inspection</relationshipLabel>
        <relationshipName>Rooms_Space_Inspection</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CLQ_Room_Space_Location__c</fullName>
        <inlineHelpText>Location within the building. Eg: Floor Number</inlineHelpText>
        <label>Room/Space Location</label>
        <picklist>
            <picklistValues>
                <fullName>Basement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Room_Space_Number__c</fullName>
        <inlineHelpText>Enter the Room/Space number as used by the program.</inlineHelpText>
        <label>Room/Space Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Room_Space_Shape__c</fullName>
        <label>Room/Space Shape</label>
        <picklist>
            <picklistValues>
                <fullName>Square</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rectangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-Shaped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Room_Space_Type__c</fullName>
        <label>Room/Space Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Space</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Square_Footage_Irregular__c</fullName>
        <label>Square Footage Irregular</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Square_Footage__c</fullName>
        <formula>((CLQ_Width_Feet__c * 12 +  CLQ_Width_Inches__c ) * ( CLQ_Length_Feet__c * 12 +  CLQ_Length_Inches__c ))/144</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_State__c</fullName>
        <formula>TEXT( CLQ_Program__r.CLQ_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Street_Address_1__c</fullName>
        <formula>CLQ_Program__r.CLQ_Street_Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Street_Address_2__c</fullName>
        <formula>CLQ_Program__r.CLQ_Street_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Used_by_Under_or_Over_2_1_2__c</fullName>
        <label>Used by Under or Over 2 1/2</label>
        <picklist>
            <picklistValues>
                <fullName>Under</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Width2_Feet__c</fullName>
        <label>Width2 Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Width2_Inches__c</fullName>
        <label>Width2 Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Width_Additional_Inches__c</fullName>
        <label>Width Additional Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Width_Feet__c</fullName>
        <label>Width1 Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Width_Inches__c</fullName>
        <label>Width1 Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Zipcode__c</fullName>
        <formula>CLQ_Program__r.CLQ_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zipcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Notes__c</fullName>
        <description>This will be used to capture notes against the age group</description>
        <label>File Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onsite_status__c</fullName>
        <formula>CLQ_Inspection__r.Inspection_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onsite status</label>
        <type>Checkbox</type>
    </fields>
    <label>Room/Space Inspection</label>
    <nameField>
        <displayFormat>RSI-{000000}</displayFormat>
        <label>Room/Space Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms/Space Inspection</pluralLabel>
    <recordTypes>
        <fullName>CLQ_Indoor_Room_Space</fullName>
        <active>true</active>
        <label>Indoor Room/Space</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Outdoor_Space</fullName>
        <active>true</active>
        <label>Outdoor Space</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>